[gd_scene load_steps=5 format=3 uid="uid://lottery_main_scene"]

[ext_resource type="Script" path="res://game/lottery_controller.gd" id="1"]
[ext_resource type="Shader" path="res://shaders/stellar_core.gdshader" id="2"]
[ext_resource type="Shader" path="res://shaders/stardust_particle.gdshader" id="3"]
[ext_resource type="Script" path="res://game/confetti_system.gd" id="4"]

[sub_resource type="SphereMesh" id="SphereMesh"]
radius = 100.0
height = 200.0
radial_segments = 32
rings = 16

[node name="Main" type="Node3D"]
script = ExtResource("1")

[node name="Camera3D" type="Camera3D" parent="."]
position = Vector3(0, 0, 3000)

[node name="CardContainer" type="Node3D" parent="."]

[node name="StellarCore" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh")

[node name="StellarCoreMaterial" type="ShaderMaterial" parent="StellarCore"]
shader = ExtResource("2")
shader_param/u_time = 0.0

[node name="StardustContainer" type="Node3D" parent="."]

[node name="ConfettiSystem" type="Node3D" parent="."]
script = ExtResource("4")

[node name="UILayer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LayoutButtons" type="HBoxContainer" parent="UILayer"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_right = 820.0
offset_bottom = -80.0
grow_horizontal = 2
theme_override_constants/separation = 10

[node name="SphereButton" type="Button" parent="UILayer/LayoutButtons"]
layout_mode = 2
text = "球体布局"

[node name="VortexButton" type="Button" parent="UILayer/LayoutButtons"]
layout_mode = 2
text = "星涡布局"

[node name="GridButton" type="Button" parent="UILayer/LayoutButtons"]
layout_mode = 2
text = "网格布局"

[node name="HelixButton" type="Button" parent="UILayer/LayoutButtons"]
layout_mode = 2
text = "螺旋布局"

[node name="LotteryButton" type="Button" parent="UILayer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -30.0
offset_right = 100.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "开始抽奖"
